# pcomp-2019

./: .gitignore  .gitmodules  journal.org  madz.md  notes_cours2_carine.org  notes_evaluation_hugo.txt
defis/0/: Anagram.scala  Makefile  notes-vincent.md  prise-de-notes  specification.md
defis/1/: Makefile  README.md  architecture.md  specification.org
defis/2/: Makefile  big.csv  generate.ml
defis/2/zozozo/src/: ast.ml  ast.mli  data.ml  data.mli  dune  formulaOrder.ml  formulaOrder.mli  graph.ml  graph.mli  main.ml  master.ml  parser.ml  parser.mli  partitioner.ml  partitioner.mli  printer.ml  printer.mli  region.ml  region.mli  regiondata.ml  regiondata.mli  slave.ml  spreadsheet.ml  spreadsheet.mli  top_level_test.ml
docs/: README.md  bibliographie.md  comment-evaluer-du-code-source.md  comment-presenter-du-code-source.md
etudiants/: GoF  GoF.md  achahour_mouhoubi_hu.md  aquamen.md  etudiants.org  madz.md  triplek.md  zozozo.org
exercises/coroutines/: README.md
madz/: .classpath  .gitignore  Dockerfile  Main.scala  data.csv
madz/document/: note.zhenlei.org  request.zhenlei.plantuml  usecase.zhenlei.plantuml
madz/donnees/: CSVFile.scala  CaseData.scala  DataInterpreteur.scala  DataParser.scala  Estimate_change.scala  FeuilleSimple.scala  FileCSV_DAO.scala  GestionnaireDependance.scala  PrinterCSV.scala  Requete.scala  Scheduler.scala  Sheeft_evalued.scala
madz/presentation/: contenu.zhenlei.org
madz/src/: Main.scala
presentation/: Makefile  julien.md  listings-rust.sty  para.tex  parallelism.md  presentation.tex  syntax.tex  typer.tex
(+474 files in other folders)
