(executable
  (name main)
  (libraries lib)
  (modules main))
(library
  (name	lib)
  (wrapped false)
  (modules regiondata ast graph formulaOrder parser partitioner printer region spreadsheet )
  (libraries unix bigarray functory))

; Disable warning as errors
(env
  (dev
    (flags (:standard -warn-error -A))))
